# FusedFastSoftFloat-ieee754-like

./: .cproject  .gitignore  .project  CMakeLists.txt  EmbeddedUnitTests.ioc  EmbeddedUnitTests.sln  EmbeddedUnitTests.vgdbcmake  README.md
Core/Src/: main.c  syscalls.c
Tests/Inc/: FusedSoftFloat.hh
Tests/Src/: Whetstones.cpp  linpack.cpp  tests.cpp
